Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,28 +502,28 @@
     ]
   },
   {
-    "title": "5 món ăn hỗ trợ phòng cảm lạnh, cúm",
-    "content": "Bài viết đề cập đến năm món ăn có lợi cho việc phòng ngừa cảm lạnh và cúm. Các thực phẩm như cá béo, hải sản, chocolate đen, trái cây họ cam quýt và các loại hạt được khuyến nghị để tăng cường hệ thống miễn dịch. Hải sản và cá béo cung cấp omega-3, trong khi chocolate đen và trái cây họ cam quýt cung cấp vitamin C và các khoáng chất cần thiết giúp bảo vệ cơ thể. Những thực phẩm này không chỉ ngon mà còn có tác dụng tích cực đối với sức khỏe trong mùa cảm cúm.",
-    "link": "https://vnexpress.net/5-mon-an-ho-tro-phong-cam-lanh-cum-4861629.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món ăn nào giúp phòng ngừa cảm lạnh và cúm?",
+    "title": "Bộ Khoa học và Công nghệ công bố 5 giá trị cốt lõi, 4 phương châm hành động",
+    "content": "Bộ Khoa học và Công nghệ đã công bố 5 giá trị cốt lõi bao gồm tiên phong, sáng tạo, đột phá, trung dũng và nghĩa tình, cùng với 4 phương châm hành động là làm gương, kỷ cương, trọng tâm và bứt phá. Những giá trị này sẽ là nền tảng cho mọi hoạt động của Bộ, nhấn mạnh tầm quan trọng của sự lãnh đạo gương mẫu và kỷ luật trong công việc. Bộ trưởng Nguyễn Mạnh Hùng cho rằng, việc đổi mới sáng tạo và phát triển công nghệ cần phải được đẩy mạnh để Việt Nam tiến lên trở thành nước phát triển có thu nhập cao.",
+    "link": "https://vnexpress.net/bo-khoa-hoc-va-cong-nghe-cong-bo-5-gia-tri-cot-loi-4-phuong-cham-hanh-dong-4861677.html",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Bộ Khoa học và Công nghệ đã công bố những giá trị cốt lõi nào?",
     "answers": [
       {
-        "text": "Cá béo, hải sản, chocolate đen, cam, quýt",
+        "text": "tiên phong, sáng tạo, đột phá, trung dũng, nghĩa tình",
         "correct": true
       },
       {
-        "text": "Bánh quy, nước ngọt, thịt nướng",
+        "text": "truyền thống, đổi mới, sáng tạo, hợp tác, phát triển",
         "correct": false
       },
       {
-        "text": "Rau xanh, cơm trắng, trứng gà",
+        "text": "bền vững, hiệu quả, sáng tạo, trung thực, nghĩa tình",
         "correct": false
       },
       {
-        "text": "Thức ăn nhanh, đồ chiên, kẹo ngọt",
+        "text": "trách nhiệm, kỷ cương, sáng tạo, bứt phá, đột phá",
         "correct": false
       }
     ]
@@ -555,6 +555,33 @@
       },
       {
         "text": "Chỉ gây đau lưng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn hỗ trợ phòng cảm lạnh, cúm",
+    "content": "Bài viết đề cập đến năm món ăn có lợi cho việc phòng ngừa cảm lạnh và cúm. Các thực phẩm như cá béo, hải sản, chocolate đen, trái cây họ cam quýt và các loại hạt được khuyến nghị để tăng cường hệ thống miễn dịch. Hải sản và cá béo cung cấp omega-3, trong khi chocolate đen và trái cây họ cam quýt cung cấp vitamin C và các khoáng chất cần thiết giúp bảo vệ cơ thể. Những thực phẩm này không chỉ ngon mà còn có tác dụng tích cực đối với sức khỏe trong mùa cảm cúm.",
+    "link": "https://vnexpress.net/5-mon-an-ho-tro-phong-cam-lanh-cum-4861629.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món ăn nào giúp phòng ngừa cảm lạnh và cúm?",
+    "answers": [
+      {
+        "text": "Cá béo, hải sản, chocolate đen, cam, quýt",
+        "correct": true
+      },
+      {
+        "text": "Bánh quy, nước ngọt, thịt nướng",
+        "correct": false
+      },
+      {
+        "text": "Rau xanh, cơm trắng, trứng gà",
+        "correct": false
+      },
+      {
+        "text": "Thức ăn nhanh, đồ chiên, kẹo ngọt",
         "correct": false
       }
     ]
@@ -1917,33 +1944,6 @@
     ]
   },
   {
-    "title": "Trẻ em không phải cỗ máy đạt thành tích",
-    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
-    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
-    "answers": [
-      {
-        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
     "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
     "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
@@ -1997,6 +1997,33 @@
       },
       {
         "text": "Không hợp tác với truyền thông",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trẻ em không phải cỗ máy đạt thành tích",
+    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
+    "answers": [
+      {
+        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
         "correct": false
       }
     ]
@@ -2315,37 +2342,6 @@
     ]
   },
   {
-    "title": "Ga T3 sẽ tiếp nhận khoảng 80% khách bay nội địa ở Tân Sơn Nhất",
-    "content": "Ga T3 tại sân bay Tân Sơn Nhất sẽ tiếp nhận khoảng 80% khách bay nội địa, chủ yếu từ hai hãng hàng không Vietnam Airlines và Vietjet Air, nhằm giảm tải cho ga T1 đã quá tải nhiều năm. Dự kiến, ga T3 sẽ chính thức khai thác từ ngày 30/4/2025 sau khi tổ chức các chuyến bay thử nghiệm. Với công suất phục vụ lên tới 20 triệu khách mỗi năm, T3 sẽ nâng tổng công suất của sân bay lên 50 triệu khách mỗi năm, đồng thời cải thiện tình trạng giao thông xung quanh.",
-    "link": "https://vnexpress.net/ga-t3-se-tiep-nhan-khoang-80-khach-bay-noi-dia-o-tan-son-nhat-4861482.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Khi nào ga T3 tại Tân Sơn Nhất sẽ chính thức khai thác?",
-    "answers": [
-      {
-        "text": "Ngày 30/4/2025",
-        "correct": true
-      },
-      {
-        "text": "Ngày 1/5/2025",
-        "correct": false
-      },
-      {
-        "text": "Ngày 15/4/2025",
-        "correct": false
-      },
-      {
-        "text": "Ngày 1/6/2025",
-        "correct": false
-      },
-      {
-        "text": "Ngày 10/5/2025",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gần 32% lao động TP HCM tìm việc lương trên 20 triệu đồng mỗi tháng",
     "content": "Gần 32% lao động ở TP HCM tìm kiếm việc làm với mức lương trên 20 triệu đồng mỗi tháng, trong khi chỉ khoảng 9,77% số vị trí tuyển dụng tại các doanh nghiệp đáp ứng được yêu cầu này. Theo báo cáo của UBND TP HCM, lao động có trình độ đại học trở lên chiếm gần 68% trong khi nhu cầu tuyển dụng chủ yếu tập trung vào lao động phổ thông. Điều này cho thấy sự mất cân đối giữa mong muốn của người lao động và nhu cầu thực tế của thị trường lao động tại thành phố.",
     "link": "https://vnexpress.net/gan-32-lao-dong-tp-hcm-tim-viec-luong-tren-20-trieu-dong-moi-thang-4861495.html",
@@ -2372,6 +2368,37 @@
       },
       {
         "text": "3,64%",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ga T3 sẽ tiếp nhận khoảng 80% khách bay nội địa ở Tân Sơn Nhất",
+    "content": "Ga T3 tại sân bay Tân Sơn Nhất sẽ tiếp nhận khoảng 80% khách bay nội địa, chủ yếu từ hai hãng hàng không Vietnam Airlines và Vietjet Air, nhằm giảm tải cho ga T1 đã quá tải nhiều năm. Dự kiến, ga T3 sẽ chính thức khai thác từ ngày 30/4/2025 sau khi tổ chức các chuyến bay thử nghiệm. Với công suất phục vụ lên tới 20 triệu khách mỗi năm, T3 sẽ nâng tổng công suất của sân bay lên 50 triệu khách mỗi năm, đồng thời cải thiện tình trạng giao thông xung quanh.",
+    "link": "https://vnexpress.net/ga-t3-se-tiep-nhan-khoang-80-khach-bay-noi-dia-o-tan-son-nhat-4861482.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Khi nào ga T3 tại Tân Sơn Nhất sẽ chính thức khai thác?",
+    "answers": [
+      {
+        "text": "Ngày 30/4/2025",
+        "correct": true
+      },
+      {
+        "text": "Ngày 1/5/2025",
+        "correct": false
+      },
+      {
+        "text": "Ngày 15/4/2025",
+        "correct": false
+      },
+      {
+        "text": "Ngày 1/6/2025",
+        "correct": false
+      },
+      {
+        "text": "Ngày 10/5/2025",
         "correct": false
       }
     ]
@@ -4224,33 +4251,6 @@
     ]
   },
   {
-    "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
-    "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
-    "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Khó thở sau khi khỏi cúm A có phải do phổi chưa hồi phục không?",
-    "answers": [
-      {
-        "text": "Có, phổi có thể chưa hồi phục hoàn toàn.",
-        "correct": true
-      },
-      {
-        "text": "Không, khó thở không liên quan đến cúm A.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng không cần khám phổi.",
-        "correct": false
-      },
-      {
-        "text": "Có, chỉ cần nghỉ ngơi là đủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
     "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
     "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
@@ -4273,6 +4273,33 @@
       },
       {
         "text": "Khi trẻ bị viêm phổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
+    "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
+    "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Khó thở sau khi khỏi cúm A có phải do phổi chưa hồi phục không?",
+    "answers": [
+      {
+        "text": "Có, phổi có thể chưa hồi phục hoàn toàn.",
+        "correct": true
+      },
+      {
+        "text": "Không, khó thở không liên quan đến cúm A.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng không cần khám phổi.",
+        "correct": false
+      },
+      {
+        "text": "Có, chỉ cần nghỉ ngơi là đủ.",
         "correct": false
       }
     ]
