--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Không phải là người lập di chúc có được quyền yêu cầu công chứng di chúc không?",
+    "content": "Theo quy định tại Điều 56 Luật Công chứng 2014, chỉ có người lập di chúc mới có quyền yêu cầu công chứng di chúc. Trong trường hợp của chị Lê Hoàng Minh, việc văn phòng công chứng từ chối yêu cầu công chứng di chúc của ông nội chị là đúng theo quy định pháp luật. Điều này có nghĩa là bố chị không có quyền yêu cầu công chứng di chúc do ông nội lập.",
+    "link": "https://tuoitre.vn/khong-phai-la-nguoi-lap-di-chuc-co-duoc-quyen-yeu-cau-cong-chung-di-chuc-khong-20250315080559123.htm",
+    "cat": "phap-luat",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người không lập di chúc có quyền yêu cầu công chứng di chúc không?",
+    "answers": [
+      {
+        "text": "Không, chỉ người lập di chúc mới có quyền yêu cầu công chứng.",
+        "correct": true
+      },
+      {
+        "text": "Có, nhưng phải có sự đồng ý của người lập di chúc.",
+        "correct": false
+      },
+      {
+        "text": "Có, nếu người đó là người thừa kế.",
+        "correct": false
+      },
+      {
+        "text": "Không, phải là người đại diện hợp pháp của người lập di chúc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quán mì robot chế biến trong 48 giây, giá chỉ 35.000 đồng",
     "content": "Quán mì Future Noodle Restaurant tại Thâm Quyến, Trung Quốc, gây ấn tượng với thực khách nhờ việc chế biến mì hoàn toàn tự động chỉ trong 48 giây và giá cả hợp lý, từ 35.000 đến 70.000 đồng. Toàn bộ quá trình chế biến được thực hiện bởi robot, từ nhào bột đến nấu chín mì. Dù thu hút nhiều khách hàng nhờ sự tiện lợi và hương vị thơm ngon, một số người lo ngại về việc robot sẽ thay thế con người trong ngành ẩm thực.",
     "link": "https://tuoitre.vn/quan-mi-robot-che-bien-trong-48-giay-gia-chi-35-000-dong-2025031511354028.htm",
@@ -1098,6 +1125,87 @@
     ]
   },
   {
+    "title": "Vì sao đổ nhiều mồ hôi khi mang thai?",
+    "content": "Trong thai kỳ, tình trạng đổ nhiều mồ hôi là hiện tượng phổ biến, đặc biệt trong ba tháng đầu và ba tháng cuối. Nguyên nhân chủ yếu bao gồm sự thay đổi hormone, tăng lưu thông máu, và tốc độ trao đổi chất nhanh hơn. Ngoài ra, căng thẳng, chế độ ăn uống và một số bệnh lý như cường giáp cũng có thể góp phần làm tăng tiết mồ hôi. Nếu tình trạng này gây khó chịu, thai phụ nên đến bác sĩ để được tư vấn và loại trừ các bệnh lý tiềm ẩn.",
+    "link": "https://vnexpress.net/vi-sao-do-nhieu-mo-hoi-khi-mang-thai-4861517.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Tại sao phụ nữ mang thai lại đổ nhiều mồ hôi?",
+    "answers": [
+      {
+        "text": "Do sự thay đổi hormone trong thai kỳ.",
+        "correct": true
+      },
+      {
+        "text": "Vì ăn uống không đúng cách.",
+        "correct": false
+      },
+      {
+        "text": "Do tập thể dục quá sức.",
+        "correct": false
+      },
+      {
+        "text": "Vì căng thẳng tinh thần.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "FPT PolySchool kỳ vọng đưa AI trở thành công cụ phổ cập trong giáo dục",
+    "content": "FPT PolySchool đang triển khai chương trình phổ cập trí tuệ nhân tạo (AI) trong giáo dục với mục tiêu giúp giáo viên và học sinh tiếp cận công nghệ tiên tiến. Chương trình đã tổ chức hàng trăm buổi tập huấn, giúp giáo viên tiết kiệm thời gian soạn giáo án và chấm bài. FPT PolySchool mong muốn AI sẽ trở thành công cụ phổ biến, tạo nền tảng cho một nền giáo dục số hiện đại và hội nhập toàn cầu.",
+    "link": "https://dantri.com.vn/giao-duc/fpt-polyschool-ky-vong-dua-ai-tro-thanh-cong-cu-pho-cap-trong-giao-duc-20250314135539589.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "FPT PolySchool đang thực hiện điều gì trong giáo dục?",
+    "answers": [
+      {
+        "text": "Phổ cập trí tuệ nhân tạo (AI) trong giáo dục",
+        "correct": true
+      },
+      {
+        "text": "Giảm thời gian học tập cho học sinh",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường hoạt động ngoại khóa",
+        "correct": false
+      },
+      {
+        "text": "Cải thiện cơ sở vật chất trường học",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "2 đứa trẻ xuất hiện trong \"cuộc phỏng vấn thảm họa\" giờ ra sao?",
+    "content": "Bài viết cập nhật về gia đình ông Robert E. Kelly, người nổi tiếng với \"cuộc phỏng vấn thảm họa\" năm 2017, trong đó hai con nhỏ của ông bất ngờ xuất hiện gây ra cảnh hỗn loạn. Sau 8 năm, con gái ông, Marion, hiện đã 12 tuổi, và con trai, James, sắp tròn 9 tuổi. Ông Kelly bày tỏ sự biết ơn vì công chúng đã nhìn nhận sự cố một cách hài hước và chân thực, giúp gia đình ông gắn bó hơn. Ông cũng nhấn mạnh tầm quan trọng của sự hài hước trong cuộc sống gia đình, đặc biệt là với những bậc phụ huynh nuôi con nhỏ.",
+    "link": "https://dantri.com.vn/giao-duc/2-dua-tre-xuat-hien-trong-cuoc-phong-van-tham-hoa-gio-ra-sao-20250314091621739.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Hiện tại hai đứa trẻ trong \"cuộc phỏng vấn thảm họa\" sống ra sao?",
+    "answers": [
+      {
+        "text": "Marion 12 tuổi, James 9 tuổi.",
+        "correct": true
+      },
+      {
+        "text": "Marion 10 tuổi, James 7 tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Marion 15 tuổi, James 11 tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Marion 8 tuổi, James 5 tuổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "U mùi trứng thối lan toàn thân cô gái",
     "content": "Chị Tâm, 23 tuổi, đã gặp phải tình trạng u bã đậu vỡ, gây ra nhiễm trùng và mùi hôi khó chịu. U bắt đầu xuất hiện khi chị 18 tuổi và đã lan ra khắp cơ thể. Sau khi được điều trị và phẫu thuật tại Phòng khám Đa khoa Tâm Anh, chị đã hồi phục và xuất viện. Bác sĩ khuyến cáo cần điều trị kịp thời để tránh tái phát và biến chứng nặng hơn.",
     "link": "https://vnexpress.net/u-mui-trung-thoi-lan-toan-than-co-gai-4861555.html",
@@ -1155,87 +1263,6 @@
       },
       {
         "text": "Béo phì",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao đổ nhiều mồ hôi khi mang thai?",
-    "content": "Trong thai kỳ, tình trạng đổ nhiều mồ hôi là hiện tượng phổ biến, đặc biệt trong ba tháng đầu và ba tháng cuối. Nguyên nhân chủ yếu bao gồm sự thay đổi hormone, tăng lưu thông máu, và tốc độ trao đổi chất nhanh hơn. Ngoài ra, căng thẳng, chế độ ăn uống và một số bệnh lý như cường giáp cũng có thể góp phần làm tăng tiết mồ hôi. Nếu tình trạng này gây khó chịu, thai phụ nên đến bác sĩ để được tư vấn và loại trừ các bệnh lý tiềm ẩn.",
-    "link": "https://vnexpress.net/vi-sao-do-nhieu-mo-hoi-khi-mang-thai-4861517.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Tại sao phụ nữ mang thai lại đổ nhiều mồ hôi?",
-    "answers": [
-      {
-        "text": "Do sự thay đổi hormone trong thai kỳ.",
-        "correct": true
-      },
-      {
-        "text": "Vì ăn uống không đúng cách.",
-        "correct": false
-      },
-      {
-        "text": "Do tập thể dục quá sức.",
-        "correct": false
-      },
-      {
-        "text": "Vì căng thẳng tinh thần.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "2 đứa trẻ xuất hiện trong \"cuộc phỏng vấn thảm họa\" giờ ra sao?",
-    "content": "Bài viết cập nhật về gia đình ông Robert E. Kelly, người nổi tiếng với \"cuộc phỏng vấn thảm họa\" năm 2017, trong đó hai con nhỏ của ông bất ngờ xuất hiện gây ra cảnh hỗn loạn. Sau 8 năm, con gái ông, Marion, hiện đã 12 tuổi, và con trai, James, sắp tròn 9 tuổi. Ông Kelly bày tỏ sự biết ơn vì công chúng đã nhìn nhận sự cố một cách hài hước và chân thực, giúp gia đình ông gắn bó hơn. Ông cũng nhấn mạnh tầm quan trọng của sự hài hước trong cuộc sống gia đình, đặc biệt là với những bậc phụ huynh nuôi con nhỏ.",
-    "link": "https://dantri.com.vn/giao-duc/2-dua-tre-xuat-hien-trong-cuoc-phong-van-tham-hoa-gio-ra-sao-20250314091621739.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Hiện tại hai đứa trẻ trong \"cuộc phỏng vấn thảm họa\" sống ra sao?",
-    "answers": [
-      {
-        "text": "Marion 12 tuổi, James 9 tuổi.",
-        "correct": true
-      },
-      {
-        "text": "Marion 10 tuổi, James 7 tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Marion 15 tuổi, James 11 tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Marion 8 tuổi, James 5 tuổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "FPT PolySchool kỳ vọng đưa AI trở thành công cụ phổ cập trong giáo dục",
-    "content": "FPT PolySchool đang triển khai chương trình phổ cập trí tuệ nhân tạo (AI) trong giáo dục với mục tiêu giúp giáo viên và học sinh tiếp cận công nghệ tiên tiến. Chương trình đã tổ chức hàng trăm buổi tập huấn, giúp giáo viên tiết kiệm thời gian soạn giáo án và chấm bài. FPT PolySchool mong muốn AI sẽ trở thành công cụ phổ biến, tạo nền tảng cho một nền giáo dục số hiện đại và hội nhập toàn cầu.",
-    "link": "https://dantri.com.vn/giao-duc/fpt-polyschool-ky-vong-dua-ai-tro-thanh-cong-cu-pho-cap-trong-giao-duc-20250314135539589.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "FPT PolySchool đang thực hiện điều gì trong giáo dục?",
-    "answers": [
-      {
-        "text": "Phổ cập trí tuệ nhân tạo (AI) trong giáo dục",
-        "correct": true
-      },
-      {
-        "text": "Giảm thời gian học tập cho học sinh",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường hoạt động ngoại khóa",
-        "correct": false
-      },
-      {
-        "text": "Cải thiện cơ sở vật chất trường học",
         "correct": false
       }
     ]
@@ -1554,60 +1581,6 @@
     ]
   },
   {
-    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
-    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
-    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
-    "answers": [
-      {
-        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
-        "correct": true
-      },
-      {
-        "text": "Vì thời tiết đẹp quanh năm.",
-        "correct": false
-      },
-      {
-        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
-        "correct": false
-      },
-      {
-        "text": "Vì Việt Nam có nhiều món ăn ngon.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trẻ em không phải cỗ máy đạt thành tích",
-    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
-    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
-    "answers": [
-      {
-        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Kim Soo Hyun bị tố nói dối, công bố tâm thư của mẹ Kim Sae Ron",
     "content": "Kim Soo Hyun đã bị cáo buộc nói dối về mốc thời gian hẹn hò với Kim Sae Ron trong một buổi phát sóng trực tuyến của kênh YouTube Viện Garo Sero. Kênh này đã công bố tâm thư của mẹ Kim Sae Ron, trong đó bà khẳng định con gái mình không phải là người như truyền thông đã miêu tả và yêu cầu pháp luật can thiệp vào những thông tin sai lệch. Đồng thời, công ty quản lý của Kim Soo Hyun cũng xác nhận rằng tài tử này đang gặp áp lực tâm lý và có thể đã rời Hàn Quốc.",
     "link": "https://dantri.com.vn/giai-tri/kim-soo-hyun-bi-to-noi-doi-cong-bo-tam-thu-cua-me-kim-sae-ron-20250314200757713.htm",
@@ -1661,6 +1634,60 @@
       },
       {
         "text": "Vì không có giấy phép kinh doanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
+    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
+    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
+    "answers": [
+      {
+        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
+        "correct": true
+      },
+      {
+        "text": "Vì thời tiết đẹp quanh năm.",
+        "correct": false
+      },
+      {
+        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Việt Nam có nhiều món ăn ngon.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trẻ em không phải cỗ máy đạt thành tích",
+    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
+    "answers": [
+      {
+        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
         "correct": false
       }
     ]
