Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -139,6 +139,37 @@
     ]
   },
   {
+    "title": "Ai dễ mắc và tái phát zona thần kinh?",
+    "content": "Bài viết đề cập đến những người có nguy cơ cao mắc và tái phát zona thần kinh, bao gồm những người mắc bệnh nền như tiểu đường, tăng huyết áp, bệnh tim mạch và rối loạn lipid máu. Các bệnh lý này làm suy giảm hệ miễn dịch, tạo điều kiện cho virus Varicella Zoster hoạt động trở lại sau thời gian 'ngủ đông'. Để phòng ngừa, bác sĩ khuyến cáo người dân nên tiêm vaccine thủy đậu và zona thần kinh, đặc biệt là cho những người từ 50 tuổi trở lên hoặc có nguy cơ cao.",
+    "link": "https://vnexpress.net/ai-de-mac-va-tai-phat-zona-than-kinh-4861703.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ai dễ mắc và tái phát zona thần kinh?",
+    "answers": [
+      {
+        "text": "Người có bệnh nền như tiểu đường và tăng huyết áp",
+        "correct": true
+      },
+      {
+        "text": "Người khỏe mạnh không có bệnh lý",
+        "correct": false
+      },
+      {
+        "text": "Trẻ em dưới 12 tuổi",
+        "correct": false
+      },
+      {
+        "text": "Phụ nữ mang thai",
+        "correct": false
+      },
+      {
+        "text": "Người cao tuổi không mắc bệnh nền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "\"Giải mã\" hộ kinh doanh né lên doanh nghiệp",
     "content": "Bài viết thảo luận về lý do nhiều hộ kinh doanh ở Việt Nam ngần ngại chuyển đổi thành doanh nghiệp. Mặc dù việc chuyển đổi có nhiều lợi ích như tăng khả năng tiếp cận vốn và nâng cao uy tín, nhiều hộ kinh doanh vẫn lo ngại về thủ tục hành chính, thuế và trách nhiệm pháp lý. Các chuyên gia khuyến nghị cần có chính sách đơn giản hóa và hỗ trợ để khuyến khích hộ kinh doanh chuyển đổi sang doanh nghiệp.",
     "link": "https://tuoitre.vn/giai-ma-ho-kinh-doanh-ne-len-doanh-nghiep-20250315092924579.htm",
@@ -367,33 +398,6 @@
     ]
   },
   {
-    "title": "5 món ăn hỗ trợ phòng cảm lạnh, cúm",
-    "content": "Bài viết đề cập đến năm món ăn có lợi cho việc phòng ngừa cảm lạnh và cúm. Các thực phẩm như cá béo, hải sản, chocolate đen, trái cây họ cam quýt và các loại hạt được khuyến nghị để tăng cường hệ thống miễn dịch. Hải sản và cá béo cung cấp omega-3, trong khi chocolate đen và trái cây họ cam quýt cung cấp vitamin C và các khoáng chất cần thiết giúp bảo vệ cơ thể. Những thực phẩm này không chỉ ngon mà còn có tác dụng tích cực đối với sức khỏe trong mùa cảm cúm.",
-    "link": "https://vnexpress.net/5-mon-an-ho-tro-phong-cam-lanh-cum-4861629.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món ăn nào giúp phòng ngừa cảm lạnh và cúm?",
-    "answers": [
-      {
-        "text": "Cá béo, hải sản, chocolate đen, cam, quýt",
-        "correct": true
-      },
-      {
-        "text": "Bánh quy, nước ngọt, thịt nướng",
-        "correct": false
-      },
-      {
-        "text": "Rau xanh, cơm trắng, trứng gà",
-        "correct": false
-      },
-      {
-        "text": "Thức ăn nhanh, đồ chiên, kẹo ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé 13 tuổi đột quỵ",
     "content": "Một bé trai 13 tuổi ở Hà Nội đã bị đột quỵ não trong khi đi đường, với triệu chứng đau đầu dữ dội và ngã xuống đất. Sau khi nhập viện, các bác sĩ đã chụp CT và phát hiện vỡ phình mạch não, dẫn đến xuất huyết dưới nhện. Đây là trường hợp hiếm gặp ở trẻ em, thường xảy ra ở người lớn tuổi với các yếu tố nguy cơ như tăng huyết áp. Mặc dù đã can thiệp thành công, bé vẫn cần theo dõi thêm do còn một đoạn phình khác chưa được xử lý.",
     "link": "https://vnexpress.net/be-13-tuoi-dot-quy-4861597.html",
@@ -416,6 +420,33 @@
       },
       {
         "text": "Mất nước nghiêm trọng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn hỗ trợ phòng cảm lạnh, cúm",
+    "content": "Bài viết đề cập đến năm món ăn có lợi cho việc phòng ngừa cảm lạnh và cúm. Các thực phẩm như cá béo, hải sản, chocolate đen, trái cây họ cam quýt và các loại hạt được khuyến nghị để tăng cường hệ thống miễn dịch. Hải sản và cá béo cung cấp omega-3, trong khi chocolate đen và trái cây họ cam quýt cung cấp vitamin C và các khoáng chất cần thiết giúp bảo vệ cơ thể. Những thực phẩm này không chỉ ngon mà còn có tác dụng tích cực đối với sức khỏe trong mùa cảm cúm.",
+    "link": "https://vnexpress.net/5-mon-an-ho-tro-phong-cam-lanh-cum-4861629.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món ăn nào giúp phòng ngừa cảm lạnh và cúm?",
+    "answers": [
+      {
+        "text": "Cá béo, hải sản, chocolate đen, cam, quýt",
+        "correct": true
+      },
+      {
+        "text": "Bánh quy, nước ngọt, thịt nướng",
+        "correct": false
+      },
+      {
+        "text": "Rau xanh, cơm trắng, trứng gà",
+        "correct": false
+      },
+      {
+        "text": "Thức ăn nhanh, đồ chiên, kẹo ngọt",
         "correct": false
       }
     ]
@@ -1326,32 +1357,28 @@
     ]
   },
   {
-    "title": "'Sát thủ' thầm lặng khiến nam giới mất cơ hội làm bố",
-    "content": "Giãn tĩnh mạch thừng tinh là một trong những nguyên nhân chính gây vô sinh ở nam giới, ảnh hưởng đến khoảng 15% nam giới trưởng thành. Tình trạng này thường không có triệu chứng rõ ràng, khiến nhiều người chỉ phát hiện khi kiểm tra sức khỏe sinh sản. Nó gây ra sự tăng nhiệt độ tại tinh hoàn và rối loạn nội tiết, làm giảm chất lượng và số lượng tinh trùng. Việc điều trị có thể bao gồm phẫu thuật hoặc các phương pháp ít xâm lấn để cải thiện lưu thông máu.",
-    "link": "https://vnexpress.net/sat-thu-tham-lang-khien-nam-gioi-mat-co-hoi-lam-bo-4858248.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Giãn tĩnh mạch thừng tinh có thể gây ra vấn đề gì cho nam giới?",
+    "title": "2 đứa trẻ xuất hiện trong \"cuộc phỏng vấn thảm họa\" giờ ra sao?",
+    "content": "Bài viết cập nhật về gia đình ông Robert E. Kelly, người nổi tiếng với \"cuộc phỏng vấn thảm họa\" năm 2017, trong đó hai con nhỏ của ông bất ngờ xuất hiện gây ra cảnh hỗn loạn. Sau 8 năm, con gái ông, Marion, hiện đã 12 tuổi, và con trai, James, sắp tròn 9 tuổi. Ông Kelly bày tỏ sự biết ơn vì công chúng đã nhìn nhận sự cố một cách hài hước và chân thực, giúp gia đình ông gắn bó hơn. Ông cũng nhấn mạnh tầm quan trọng của sự hài hước trong cuộc sống gia đình, đặc biệt là với những bậc phụ huynh nuôi con nhỏ.",
+    "link": "https://dantri.com.vn/giao-duc/2-dua-tre-xuat-hien-trong-cuoc-phong-van-tham-hoa-gio-ra-sao-20250314091621739.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Hiện tại hai đứa trẻ trong \"cuộc phỏng vấn thảm họa\" sống ra sao?",
     "answers": [
       {
-        "text": "Vô sinh",
+        "text": "Marion 12 tuổi, James 9 tuổi.",
         "correct": true
       },
       {
-        "text": "Tăng huyết áp",
+        "text": "Marion 10 tuổi, James 7 tuổi.",
         "correct": false
       },
       {
-        "text": "Đau đầu",
+        "text": "Marion 15 tuổi, James 11 tuổi.",
         "correct": false
       },
       {
-        "text": "Mất ngủ",
-        "correct": false
-      },
-      {
-        "text": "Béo phì",
+        "text": "Marion 8 tuổi, James 5 tuổi.",
         "correct": false
       }
     ]
@@ -1384,28 +1411,32 @@
     ]
   },
   {
-    "title": "2 đứa trẻ xuất hiện trong \"cuộc phỏng vấn thảm họa\" giờ ra sao?",
-    "content": "Bài viết cập nhật về gia đình ông Robert E. Kelly, người nổi tiếng với \"cuộc phỏng vấn thảm họa\" năm 2017, trong đó hai con nhỏ của ông bất ngờ xuất hiện gây ra cảnh hỗn loạn. Sau 8 năm, con gái ông, Marion, hiện đã 12 tuổi, và con trai, James, sắp tròn 9 tuổi. Ông Kelly bày tỏ sự biết ơn vì công chúng đã nhìn nhận sự cố một cách hài hước và chân thực, giúp gia đình ông gắn bó hơn. Ông cũng nhấn mạnh tầm quan trọng của sự hài hước trong cuộc sống gia đình, đặc biệt là với những bậc phụ huynh nuôi con nhỏ.",
-    "link": "https://dantri.com.vn/giao-duc/2-dua-tre-xuat-hien-trong-cuoc-phong-van-tham-hoa-gio-ra-sao-20250314091621739.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Hiện tại hai đứa trẻ trong \"cuộc phỏng vấn thảm họa\" sống ra sao?",
+    "title": "'Sát thủ' thầm lặng khiến nam giới mất cơ hội làm bố",
+    "content": "Giãn tĩnh mạch thừng tinh là một trong những nguyên nhân chính gây vô sinh ở nam giới, ảnh hưởng đến khoảng 15% nam giới trưởng thành. Tình trạng này thường không có triệu chứng rõ ràng, khiến nhiều người chỉ phát hiện khi kiểm tra sức khỏe sinh sản. Nó gây ra sự tăng nhiệt độ tại tinh hoàn và rối loạn nội tiết, làm giảm chất lượng và số lượng tinh trùng. Việc điều trị có thể bao gồm phẫu thuật hoặc các phương pháp ít xâm lấn để cải thiện lưu thông máu.",
+    "link": "https://vnexpress.net/sat-thu-tham-lang-khien-nam-gioi-mat-co-hoi-lam-bo-4858248.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Giãn tĩnh mạch thừng tinh có thể gây ra vấn đề gì cho nam giới?",
     "answers": [
       {
-        "text": "Marion 12 tuổi, James 9 tuổi.",
+        "text": "Vô sinh",
         "correct": true
       },
       {
-        "text": "Marion 10 tuổi, James 7 tuổi.",
+        "text": "Tăng huyết áp",
         "correct": false
       },
       {
-        "text": "Marion 15 tuổi, James 11 tuổi.",
+        "text": "Đau đầu",
         "correct": false
       },
       {
-        "text": "Marion 8 tuổi, James 5 tuổi.",
+        "text": "Mất ngủ",
+        "correct": false
+      },
+      {
+        "text": "Béo phì",
         "correct": false
       }
     ]
@@ -1782,6 +1813,33 @@
     ]
   },
   {
+    "title": "Trẻ em không phải cỗ máy đạt thành tích",
+    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
+    "answers": [
+      {
+        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kim Soo Hyun bị tố nói dối, công bố tâm thư của mẹ Kim Sae Ron",
     "content": "Kim Soo Hyun đã bị cáo buộc nói dối về mốc thời gian hẹn hò với Kim Sae Ron trong một buổi phát sóng trực tuyến của kênh YouTube Viện Garo Sero. Kênh này đã công bố tâm thư của mẹ Kim Sae Ron, trong đó bà khẳng định con gái mình không phải là người như truyền thông đã miêu tả và yêu cầu pháp luật can thiệp vào những thông tin sai lệch. Đồng thời, công ty quản lý của Kim Soo Hyun cũng xác nhận rằng tài tử này đang gặp áp lực tâm lý và có thể đã rời Hàn Quốc.",
     "link": "https://dantri.com.vn/giai-tri/kim-soo-hyun-bi-to-noi-doi-cong-bo-tam-thu-cua-me-kim-sae-ron-20250314200757713.htm",
@@ -1835,33 +1893,6 @@
       },
       {
         "text": "Vì không có giấy phép kinh doanh.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trẻ em không phải cỗ máy đạt thành tích",
-    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
-    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
-    "answers": [
-      {
-        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
         "correct": false
       }
     ]
@@ -2918,6 +2949,33 @@
     ]
   },
   {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -2944,33 +3002,6 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -4030,60 +4061,6 @@
       },
       {
         "text": "Vào tháng 8",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nga cảnh báo cuộc chiến dưới nước với NATO",
-    "content": "Nga đã cáo buộc NATO đang phát triển các phương pháp mới để tấn công vào cơ sở hạ tầng hàng hải và tàu chở dầu của họ. Ông Nikolay Patrushev, trợ lý của Tổng thống Nga, cho biết NATO đang tiến hành các cuộc tấn công mạng nhằm vào thiết bị dẫn đường của tàu Nga. Nga cũng chỉ trích việc NATO tăng cường hoạt động quân sự gần biên giới của họ, cho rằng điều này đe dọa đến sự ổn định trong khu vực.",
-    "link": "https://dantri.com.vn/the-gioi/nga-canh-bao-cuoc-chien-duoi-nuoc-voi-nato-20250314141810178.htm",
-    "cat": "the-gioi",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Nga đã cảnh báo về điều gì liên quan đến NATO?",
-    "answers": [
-      {
-        "text": "NATO đang phát triển các phương pháp tấn công vào cơ sở hạ tầng hàng hải của Nga.",
-        "correct": true
-      },
-      {
-        "text": "Nga sẽ hợp tác với NATO để cải thiện an ninh hàng hải.",
-        "correct": false
-      },
-      {
-        "text": "NATO không có kế hoạch nào đối với Nga.",
-        "correct": false
-      },
-      {
-        "text": "Nga đã ngừng mọi hoạt động quân sự với NATO.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quen bạn trai tỷ phú USD, ca sĩ Camila Cabello thăng hạng gu thời trang",
-    "content": "Camila Cabello đã thu hút sự chú ý tại Tuần lễ Thời trang Paris Thu - Đông 2025 khi xuất hiện cùng bạn trai tỷ phú USD Henry Junior Chalhoub. Cô diện một bộ vest của Chanel, thể hiện phong cách thanh lịch và quyến rũ, khác hẳn với hình ảnh nổi loạn trước đây. Sự thay đổi này không chỉ phản ánh sự ảnh hưởng từ mối quan hệ tình cảm mà còn đánh dấu sự thăng hạng trong gu thời trang của cô, hướng đến hình ảnh một biểu tượng thời trang hiện đại.",
-    "link": "https://dantri.com.vn/giai-tri/quen-ban-trai-ty-phu-usd-ca-si-camila-cabello-thang-hang-gu-thoi-trang-20250314104915141.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Camila Cabello đã thay đổi phong cách thời trang ra sao khi hẹn hò với bạn trai tỷ phú?",
-    "answers": [
-      {
-        "text": "Cô trở nên thanh lịch và quyến rũ hơn.",
-        "correct": true
-      },
-      {
-        "text": "Cô vẫn giữ phong cách nổi loạn như trước.",
-        "correct": false
-      },
-      {
-        "text": "Cô không thay đổi gì cả.",
-        "correct": false
-      },
-      {
-        "text": "Cô chuyển sang phong cách thể thao.",
         "correct": false
       }
     ]
