Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Ưu đãi đến 22,5 triệu đồng khi mua VinFast Green qua GSM",
+    "content": "VinFast sẽ cung cấp ưu đãi lên tới 22,5 triệu đồng khi khách hàng đặt cọc mua xe VinFast Green qua kênh phân phối GSM từ ngày 17 đến 24/3. Khách hàng có thể hưởng mức giảm giá trực tiếp cho từng dòng xe cũng như miễn lệ phí trước bạ và sạc pin miễn phí tại các trạm sạc công cộng. Ngoài ra, khách hàng cũng có cơ hội vay trả góp lên tới 90% giá trị xe với nhiều quyền lợi hấp dẫn khác.",
+    "link": "https://vnexpress.net/uu-dai-den-22-5-trieu-dong-khi-mua-vinfast-green-qua-gsm-4861724.html",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Khách hàng có thể nhận ưu đãi gì khi mua VinFast Green qua GSM?",
+    "answers": [
+      {
+        "text": "Giảm giá 22,5 triệu đồng mỗi xe",
+        "correct": true
+      },
+      {
+        "text": "Giảm giá 15 triệu đồng cho tất cả xe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ miễn phí sạc pin",
+        "correct": false
+      },
+      {
+        "text": "Không có ưu đãi nào",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lính Nga ở chiến trường Ukraine dùng UAV FPV \"đuổi gà\"",
     "content": "Tại chiến trường Ukraine, một binh sĩ Nga đã điều khiển máy bay không người lái FPV để \"đuổi gà\" sau khi không tìm thấy mục tiêu quân địch. Hành động này không chỉ mang tính chất giải trí mà còn đóng vai trò như một bài tập thực hành cho việc điều khiển UAV trong tương lai. Dù có thể bị coi là lãng phí, nhưng việc \"đuổi gà\" thực sự là một thử thách khó khăn do kích thước nhỏ và sự nhanh nhẹn của gà, giúp cải thiện kỹ năng cho các nhiệm vụ chiến đấu sau này.",
     "link": "https://dantri.com.vn/the-gioi/linh-nga-o-chien-truong-ukraine-dung-uav-fpv-duoi-ga-20250315122042863.htm",
@@ -390,37 +417,6 @@
     ]
   },
   {
-    "title": "VinFast Minio Green trả góp từ 26,4 triệu đồng",
-    "content": "VinFast Minio Green sẽ được bán với giá 269 triệu đồng và có chương trình trả góp với mức vay tối đa 90% trong 5 năm, bắt đầu từ 26,4 triệu đồng. Khách hàng đặt cọc trong giai đoạn từ 17/3 đến 24/3 sẽ được giảm 5 triệu đồng và miễn phí chọn màu. Xe có thiết kế nhỏ gọn, phù hợp cho dịch vụ với khả năng di chuyển tối đa 170 km sau một lần sạc.",
-    "link": "https://vnexpress.net/vinfast-minio-green-tra-gop-tu-26-4-trieu-dong-4861634.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "VinFast Minio Green có mức trả góp tối thiểu là bao nhiêu?",
-    "answers": [
-      {
-        "text": "26,4 triệu đồng",
-        "correct": true
-      },
-      {
-        "text": "50 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "15 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "30 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "20 triệu đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tranh cãi có nên 'thuê' con làm việc nhà",
     "content": "Bài viết đề cập đến cuộc tranh cãi về việc có nên trả tiền cho trẻ em khi làm việc nhà hay không. Theo khảo sát của Ngân hàng Barclays, một số phụ huynh cho rằng việc trả tiền giúp trẻ hiểu giá trị của tiền bạc, trong khi những người khác lo ngại rằng điều này sẽ tạo ra tiền lệ không tốt. Các ý kiến trái chiều từ phụ huynh và chuyên gia giáo dục được nêu lên, với những quan điểm khác nhau về việc dạy trẻ trách nhiệm và giá trị lao động.",
     "link": "https://vnexpress.net/tranh-cai-co-nen-thue-con-lam-viec-nha-4861533.html",
@@ -533,33 +529,6 @@
     ]
   },
   {
-    "title": "5 món ăn hỗ trợ phòng cảm lạnh, cúm",
-    "content": "Bài viết đề cập đến năm món ăn có lợi cho việc phòng ngừa cảm lạnh và cúm. Các thực phẩm như cá béo, hải sản, chocolate đen, trái cây họ cam quýt và các loại hạt được khuyến nghị để tăng cường hệ thống miễn dịch. Hải sản và cá béo cung cấp omega-3, trong khi chocolate đen và trái cây họ cam quýt cung cấp vitamin C và các khoáng chất cần thiết giúp bảo vệ cơ thể. Những thực phẩm này không chỉ ngon mà còn có tác dụng tích cực đối với sức khỏe trong mùa cảm cúm.",
-    "link": "https://vnexpress.net/5-mon-an-ho-tro-phong-cam-lanh-cum-4861629.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món ăn nào giúp phòng ngừa cảm lạnh và cúm?",
-    "answers": [
-      {
-        "text": "Cá béo, hải sản, chocolate đen, cam, quýt",
-        "correct": true
-      },
-      {
-        "text": "Bánh quy, nước ngọt, thịt nướng",
-        "correct": false
-      },
-      {
-        "text": "Rau xanh, cơm trắng, trứng gà",
-        "correct": false
-      },
-      {
-        "text": "Thức ăn nhanh, đồ chiên, kẹo ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng do viêm khớp cùng chậu",
     "content": "Viêm khớp cùng chậu có thể gây ra nhiều biến chứng nghiêm trọng như cứng khớp, teo cơ, ảnh hưởng đến khả năng sinh sản và sức khỏe tinh thần. Khi viêm kéo dài mà không được điều trị đúng cách, người bệnh có thể gặp khó khăn trong vận động và thậm chí liệt chi. Để điều trị, người bệnh có thể sử dụng thuốc giảm đau, kết hợp với vật lý trị liệu, nhưng trong một số trường hợp nặng, phẫu thuật có thể là lựa chọn cần thiết.",
     "link": "https://vnexpress.net/bien-chung-do-viem-khop-cung-chau-4861661.html",
@@ -586,6 +555,33 @@
       },
       {
         "text": "Chỉ gây đau lưng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn hỗ trợ phòng cảm lạnh, cúm",
+    "content": "Bài viết đề cập đến năm món ăn có lợi cho việc phòng ngừa cảm lạnh và cúm. Các thực phẩm như cá béo, hải sản, chocolate đen, trái cây họ cam quýt và các loại hạt được khuyến nghị để tăng cường hệ thống miễn dịch. Hải sản và cá béo cung cấp omega-3, trong khi chocolate đen và trái cây họ cam quýt cung cấp vitamin C và các khoáng chất cần thiết giúp bảo vệ cơ thể. Những thực phẩm này không chỉ ngon mà còn có tác dụng tích cực đối với sức khỏe trong mùa cảm cúm.",
+    "link": "https://vnexpress.net/5-mon-an-ho-tro-phong-cam-lanh-cum-4861629.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món ăn nào giúp phòng ngừa cảm lạnh và cúm?",
+    "answers": [
+      {
+        "text": "Cá béo, hải sản, chocolate đen, cam, quýt",
+        "correct": true
+      },
+      {
+        "text": "Bánh quy, nước ngọt, thịt nướng",
+        "correct": false
+      },
+      {
+        "text": "Rau xanh, cơm trắng, trứng gà",
+        "correct": false
+      },
+      {
+        "text": "Thức ăn nhanh, đồ chiên, kẹo ngọt",
         "correct": false
       }
     ]
