--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Hai kỳ nghỉ lễ dài ngày trong tháng 4",
+    "content": "Trong tháng 4 năm 2025, người lao động sẽ có hai kỳ nghỉ lễ dài ngày: Giỗ Tổ Hùng Vương từ ngày 5 đến 7/4 (ba ngày) và dịp 30/4 - 1/5 từ ngày 30/4 đến 3/5 (năm ngày). Giỗ Tổ Hùng Vương sẽ được nghỉ vào thứ Hai, 7/4 và 30/4 sẽ có lễ diễu binh kỷ niệm 50 năm ngày thống nhất đất nước tại TP HCM. Các cơ quan, doanh nghiệp sẽ bố trí lịch nghỉ phù hợp cho người lao động theo quy định của Bộ luật Lao động.",
+    "link": "https://vnexpress.net/hai-ky-nghi-le-dai-ngay-trong-thang-4-4861821.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người lao động sẽ có những kỳ nghỉ lễ nào trong tháng 4 năm 2025?",
+    "answers": [
+      {
+        "text": "Giỗ Tổ Hùng Vương và dịp 30/4 - 1/5",
+        "correct": true
+      },
+      {
+        "text": "Tết Nguyên Đán và Giỗ Tổ Hùng Vương",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc khánh và Tết Dương lịch",
+        "correct": false
+      },
+      {
+        "text": "Ngày 8/3 và Giỗ Tổ Hùng Vương",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thu nhập bình quân nhân viên bến xe Miền Tây hơn 28 triệu đồng/tháng",
     "content": "Trong năm 2024, thu nhập bình quân của nhân viên Bến xe Miền Tây đạt hơn 28 triệu đồng/tháng, tăng gần 11% so với năm 2023. Công ty có tổng cộng 151 lao động và ghi nhận doanh thu khoảng 174,6 tỷ đồng với lợi nhuận sau thuế gần 75,5 tỷ đồng. Mặc dù thu nhập cao, một số thành viên trong ban lãnh đạo không nhận lương, trong khi một vài cá nhân khác vẫn có thu nhập đáng kể từ vai trò quản lý tại công ty.",
     "link": "https://tuoitre.vn/thu-nhap-binh-quan-nhan-vien-ben-xe-mien-tay-hon-28-trieu-dong-thang-20250315194409284.htm",
@@ -1827,33 +1854,6 @@
     ]
   },
   {
-    "title": "Bé 13 tuổi đột quỵ",
-    "content": "Một bé trai 13 tuổi ở Hà Nội đã bị đột quỵ não trong khi đi đường, với triệu chứng đau đầu dữ dội và ngã xuống đất. Sau khi nhập viện, các bác sĩ đã chụp CT và phát hiện vỡ phình mạch não, dẫn đến xuất huyết dưới nhện. Đây là trường hợp hiếm gặp ở trẻ em, thường xảy ra ở người lớn tuổi với các yếu tố nguy cơ như tăng huyết áp. Mặc dù đã can thiệp thành công, bé vẫn cần theo dõi thêm do còn một đoạn phình khác chưa được xử lý.",
-    "link": "https://vnexpress.net/be-13-tuoi-dot-quy-4861597.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Tại sao bé trai 13 tuổi lại bị đột quỵ?",
-    "answers": [
-      {
-        "text": "Do vỡ phình mạch não",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tim bẩm sinh",
-        "correct": false
-      },
-      {
-        "text": "Thiếu máu não",
-        "correct": false
-      },
-      {
-        "text": "Mất nước nghiêm trọng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng do viêm khớp cùng chậu",
     "content": "Viêm khớp cùng chậu có thể gây ra nhiều biến chứng nghiêm trọng như cứng khớp, teo cơ, ảnh hưởng đến khả năng sinh sản và sức khỏe tinh thần. Khi viêm kéo dài mà không được điều trị đúng cách, người bệnh có thể gặp khó khăn trong vận động và thậm chí liệt chi. Để điều trị, người bệnh có thể sử dụng thuốc giảm đau, kết hợp với vật lý trị liệu, nhưng trong một số trường hợp nặng, phẫu thuật có thể là lựa chọn cần thiết.",
     "link": "https://vnexpress.net/bien-chung-do-viem-khop-cung-chau-4861661.html",
@@ -1880,6 +1880,33 @@
       },
       {
         "text": "Chỉ gây đau lưng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé 13 tuổi đột quỵ",
+    "content": "Một bé trai 13 tuổi ở Hà Nội đã bị đột quỵ não trong khi đi đường, với triệu chứng đau đầu dữ dội và ngã xuống đất. Sau khi nhập viện, các bác sĩ đã chụp CT và phát hiện vỡ phình mạch não, dẫn đến xuất huyết dưới nhện. Đây là trường hợp hiếm gặp ở trẻ em, thường xảy ra ở người lớn tuổi với các yếu tố nguy cơ như tăng huyết áp. Mặc dù đã can thiệp thành công, bé vẫn cần theo dõi thêm do còn một đoạn phình khác chưa được xử lý.",
+    "link": "https://vnexpress.net/be-13-tuoi-dot-quy-4861597.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Tại sao bé trai 13 tuổi lại bị đột quỵ?",
+    "answers": [
+      {
+        "text": "Do vỡ phình mạch não",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tim bẩm sinh",
+        "correct": false
+      },
+      {
+        "text": "Thiếu máu não",
+        "correct": false
+      },
+      {
+        "text": "Mất nước nghiêm trọng",
         "correct": false
       }
     ]
@@ -2817,32 +2844,28 @@
     ]
   },
   {
-    "title": "U mùi trứng thối lan toàn thân cô gái",
-    "content": "Chị Tâm, 23 tuổi, đã gặp phải tình trạng u bã đậu vỡ, gây ra nhiễm trùng và mùi hôi khó chịu. U bắt đầu xuất hiện khi chị 18 tuổi và đã lan ra khắp cơ thể. Sau khi được điều trị và phẫu thuật tại Phòng khám Đa khoa Tâm Anh, chị đã hồi phục và xuất viện. Bác sĩ khuyến cáo cần điều trị kịp thời để tránh tái phát và biến chứng nặng hơn.",
-    "link": "https://vnexpress.net/u-mui-trung-thoi-lan-toan-than-co-gai-4861555.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
+    "title": "FPT PolySchool kỳ vọng đưa AI trở thành công cụ phổ cập trong giáo dục",
+    "content": "FPT PolySchool đang triển khai chương trình phổ cập trí tuệ nhân tạo (AI) trong giáo dục với mục tiêu giúp giáo viên và học sinh tiếp cận công nghệ tiên tiến. Chương trình đã tổ chức hàng trăm buổi tập huấn, giúp giáo viên tiết kiệm thời gian soạn giáo án và chấm bài. FPT PolySchool mong muốn AI sẽ trở thành công cụ phổ biến, tạo nền tảng cho một nền giáo dục số hiện đại và hội nhập toàn cầu.",
+    "link": "https://dantri.com.vn/giao-duc/fpt-polyschool-ky-vong-dua-ai-tro-thanh-cong-cu-pho-cap-trong-giao-duc-20250314135539589.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
     "importance": 8,
-    "question": "U bã đậu của chị Tâm gây ra triệu chứng gì?",
+    "question": "FPT PolySchool đang thực hiện điều gì trong giáo dục?",
     "answers": [
       {
-        "text": "Mùi hôi khó chịu và nhiễm trùng",
+        "text": "Phổ cập trí tuệ nhân tạo (AI) trong giáo dục",
         "correct": true
       },
       {
-        "text": "Đau nhức đầu",
+        "text": "Giảm thời gian học tập cho học sinh",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và chán ăn",
+        "text": "Tăng cường hoạt động ngoại khóa",
         "correct": false
       },
       {
-        "text": "Tăng cân nhanh",
-        "correct": false
-      },
-      {
-        "text": "Mất ngủ do lo âu",
+        "text": "Cải thiện cơ sở vật chất trường học",
         "correct": false
       }
     ]
@@ -2875,28 +2898,32 @@
     ]
   },
   {
-    "title": "FPT PolySchool kỳ vọng đưa AI trở thành công cụ phổ cập trong giáo dục",
-    "content": "FPT PolySchool đang triển khai chương trình phổ cập trí tuệ nhân tạo (AI) trong giáo dục với mục tiêu giúp giáo viên và học sinh tiếp cận công nghệ tiên tiến. Chương trình đã tổ chức hàng trăm buổi tập huấn, giúp giáo viên tiết kiệm thời gian soạn giáo án và chấm bài. FPT PolySchool mong muốn AI sẽ trở thành công cụ phổ biến, tạo nền tảng cho một nền giáo dục số hiện đại và hội nhập toàn cầu.",
-    "link": "https://dantri.com.vn/giao-duc/fpt-polyschool-ky-vong-dua-ai-tro-thanh-cong-cu-pho-cap-trong-giao-duc-20250314135539589.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
+    "title": "U mùi trứng thối lan toàn thân cô gái",
+    "content": "Chị Tâm, 23 tuổi, đã gặp phải tình trạng u bã đậu vỡ, gây ra nhiễm trùng và mùi hôi khó chịu. U bắt đầu xuất hiện khi chị 18 tuổi và đã lan ra khắp cơ thể. Sau khi được điều trị và phẫu thuật tại Phòng khám Đa khoa Tâm Anh, chị đã hồi phục và xuất viện. Bác sĩ khuyến cáo cần điều trị kịp thời để tránh tái phát và biến chứng nặng hơn.",
+    "link": "https://vnexpress.net/u-mui-trung-thoi-lan-toan-than-co-gai-4861555.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
     "importance": 8,
-    "question": "FPT PolySchool đang thực hiện điều gì trong giáo dục?",
+    "question": "U bã đậu của chị Tâm gây ra triệu chứng gì?",
     "answers": [
       {
-        "text": "Phổ cập trí tuệ nhân tạo (AI) trong giáo dục",
+        "text": "Mùi hôi khó chịu và nhiễm trùng",
         "correct": true
       },
       {
-        "text": "Giảm thời gian học tập cho học sinh",
+        "text": "Đau nhức đầu",
         "correct": false
       },
       {
-        "text": "Tăng cường hoạt động ngoại khóa",
+        "text": "Mệt mỏi và chán ăn",
         "correct": false
       },
       {
-        "text": "Cải thiện cơ sở vật chất trường học",
+        "text": "Tăng cân nhanh",
+        "correct": false
+      },
+      {
+        "text": "Mất ngủ do lo âu",
         "correct": false
       }
     ]
@@ -3246,33 +3273,6 @@
     ]
   },
   {
-    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
-    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
-    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
-    "answers": [
-      {
-        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
-        "correct": true
-      },
-      {
-        "text": "Vì thời tiết đẹp quanh năm.",
-        "correct": false
-      },
-      {
-        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
-        "correct": false
-      },
-      {
-        "text": "Vì Việt Nam có nhiều món ăn ngon.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tin tức sáng 15-3: Một công ty ở TP.HCM bị phạt vì 'ém' nhiều báo cáo quan trọng",
     "content": "Công ty cổ phần Lê Bảo Minh tại TP.HCM đã bị Ủy ban Chứng khoán Nhà nước xử phạt 92,5 triệu đồng do không công bố nhiều báo cáo tài chính quan trọng, bao gồm báo cáo tài chính quý 3-2024 và các báo cáo thường niên từ năm 2022 đến 2024. Công ty này cũng đã không công bố thông tin đúng thời hạn trên hệ thống thông tin của Ủy ban, vi phạm quy định trong lĩnh vực chứng khoán.",
     "link": "https://tuoitre.vn/tin-tuc-sang-15-3-mot-cong-ty-o-tp-hcm-bi-phat-vi-em-nhieu-bao-cao-quan-trong-20250314192310823.htm",
@@ -3295,6 +3295,33 @@
       },
       {
         "text": "Vì không có giấy phép kinh doanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
+    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
+    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
+    "answers": [
+      {
+        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
+        "correct": true
+      },
+      {
+        "text": "Vì thời tiết đẹp quanh năm.",
+        "correct": false
+      },
+      {
+        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Việt Nam có nhiều món ăn ngon.",
         "correct": false
       }
     ]
@@ -3474,33 +3501,6 @@
     ]
   },
   {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -3527,6 +3527,33 @@
       },
       {
         "text": "3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
