--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Porsche cân nhắc thêm SUV chạy xăng mới",
+    "content": "Porsche đang xem xét thêm một mẫu SUV chạy xăng mới vào danh mục sản phẩm của mình bên cạnh các mẫu xe điện như Macan EV và Cayenne. Trong hội nghị thường niên năm 2025, hãng đã khẳng định cam kết với động cơ đốt trong và xe hybrid, đồng thời tiết lộ rằng mẫu SUV mới có thể chia sẻ nền tảng với Audi Q5. Mẫu xe này sẽ có thiết kế riêng và nội thất cao cấp hơn. Bên cạnh đó, Porsche cũng cho biết sẽ cắt giảm khoảng 1.900 việc làm để thích ứng với thị trường.",
+    "link": "https://vnexpress.net/porsche-can-nhac-them-suv-chay-xang-moi-4861673.html",
+    "cat": "oto-xe-may",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Porsche có kế hoạch gì mới trong dòng SUV?",
+    "answers": [
+      {
+        "text": "Cân nhắc thêm một mẫu SUV chạy xăng mới",
+        "correct": true
+      },
+      {
+        "text": "Ngừng sản xuất các mẫu SUV hiện tại",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phát triển xe điện mới",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sản xuất xe thể thao",
+        "correct": false
+      },
+      {
+        "text": "Không có kế hoạch mới nào",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một tuần nhiều biến động với Tổng thống Trump",
     "content": "Trong tuần qua, Tổng thống Donald Trump đã trải qua nhiều biến động lớn, bao gồm cuộc tranh cãi với Tổng thống Ukraine Zelensky tại Nhà Trắng và việc tiếp đón các lãnh đạo cao cấp từ châu Âu. Dù có tiến triển trong việc thống nhất lệnh ngừng bắn tạm thời với Ukraine, ông Trump cũng đối mặt với áp lực từ thị trường tài chính và những thay đổi chính trị ở Canada, nơi Tân Thủ tướng Mark Carney đã chỉ trích các chính sách thuế quan của ông. Tình hình tại Greenland cũng mang đến những thách thức mới cho Tổng thống Trump khi đảng đối lập giành chiến thắng trong cuộc bầu cử gần đây.",
     "link": "https://dantri.com.vn/the-gioi/mot-tuan-nhieu-bien-dong-voi-tong-thong-trump-20250315160930269.htm",
@@ -1634,33 +1665,6 @@
     ]
   },
   {
-    "title": "Giảm trí nhớ có phải mắc bệnh Alzheimer?",
-    "content": "Giảm trí nhớ có thể là dấu hiệu của bệnh Alzheimer, nhưng không phải lúc nào cũng vậy. Nhiều nguyên nhân khác cũng có thể dẫn đến tình trạng này, bao gồm căng thẳng, thiếu ngủ, hoặc các vấn đề sức khỏe khác. Để xác định liệu ba bạn có mắc bệnh Alzheimer hay không, cần phải kiểm tra y tế và có thể sử dụng các bài kiểm tra nhận thức hoặc chụp MRI não. Việc duy trì lối sống lành mạnh cũng góp phần cải thiện tình trạng trí nhớ.",
-    "link": "https://vnexpress.net/giam-tri-nho-co-phai-mac-benh-alzheimer-4861706.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Giảm trí nhớ có phải là dấu hiệu của bệnh Alzheimer không?",
-    "answers": [
-      {
-        "text": "Có, nhưng có nhiều nguyên nhân khác nhau.",
-        "correct": true
-      },
-      {
-        "text": "Không, luôn luôn là dấu hiệu của một bệnh nghiêm trọng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở người trẻ tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Không, chỉ là dấu hiệu của sự lão hóa tự nhiên.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điều trị bệnh nền kết hợp giảm cân cho người đàn ông",
     "content": "Anh Kiệt, 40 tuổi, mắc nhiều bệnh nền như gan, tiểu đường và béo phì, đã quyết tâm giảm cân để cải thiện sức khỏe. Sau khi được tư vấn và điều trị tại Bệnh viện Đa khoa Tâm Anh, anh đã giảm 15 kg trong 5 tháng nhờ vào chế độ dinh dưỡng hợp lý và tăng cường vận động. Việc giảm cân không chỉ giúp anh khỏe mạnh hơn mà còn gắn kết gia đình hơn khi anh cùng con gái tập thể dục.",
     "link": "https://vnexpress.net/dieu-tri-benh-nen-ket-hop-giam-can-cho-nguoi-dan-ong-4861685.html",
@@ -1687,6 +1691,33 @@
       },
       {
         "text": "12 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Giảm trí nhớ có phải mắc bệnh Alzheimer?",
+    "content": "Giảm trí nhớ có thể là dấu hiệu của bệnh Alzheimer, nhưng không phải lúc nào cũng vậy. Nhiều nguyên nhân khác cũng có thể dẫn đến tình trạng này, bao gồm căng thẳng, thiếu ngủ, hoặc các vấn đề sức khỏe khác. Để xác định liệu ba bạn có mắc bệnh Alzheimer hay không, cần phải kiểm tra y tế và có thể sử dụng các bài kiểm tra nhận thức hoặc chụp MRI não. Việc duy trì lối sống lành mạnh cũng góp phần cải thiện tình trạng trí nhớ.",
+    "link": "https://vnexpress.net/giam-tri-nho-co-phai-mac-benh-alzheimer-4861706.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Giảm trí nhớ có phải là dấu hiệu của bệnh Alzheimer không?",
+    "answers": [
+      {
+        "text": "Có, nhưng có nhiều nguyên nhân khác nhau.",
+        "correct": true
+      },
+      {
+        "text": "Không, luôn luôn là dấu hiệu của một bệnh nghiêm trọng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở người trẻ tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Không, chỉ là dấu hiệu của sự lão hóa tự nhiên.",
         "correct": false
       }
     ]
@@ -1943,33 +1974,6 @@
     ]
   },
   {
-    "title": "7 quả giàu canxi nên ăn thường xuyên",
-    "content": "Bài viết giới thiệu 7 loại quả giàu canxi mà mọi người nên ăn thường xuyên để duy trì sức khỏe xương và tim mạch. Các loại quả này bao gồm đu đủ, cam, quả sung, kiwi, mâm xôi, quả mơ và chanh, mỗi loại đều có các lợi ích dinh dưỡng riêng. Ngoài ra, bài viết cũng nhấn mạnh rằng việc tiêu thụ quá nhiều trái cây có thể dẫn đến một số tác dụng phụ.",
-    "link": "https://vnexpress.net/7-qua-giau-canxi-nen-an-thuong-xuyen-4861604.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giàu canxi nên ăn thường xuyên?",
-    "answers": [
-      {
-        "text": "Đu đủ, cam, quả sung, kiwi, mâm xôi, quả mơ, chanh",
-        "correct": true
-      },
-      {
-        "text": "Táo, chuối, dưa hấu",
-        "correct": false
-      },
-      {
-        "text": "Nho, lê, dứa",
-        "correct": false
-      },
-      {
-        "text": "Bơ, xoài, cà chua",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phẫu thuật cắt u buồng trứng giấu sẹo",
     "content": "Bà Hạnh, 51 tuổi, đã thực hiện phẫu thuật nội soi cắt u buồng trứng qua ngả âm đạo (V-NOTES) tại Bệnh viện Đa khoa Tâm Anh TP HCM. Khối u kích thước lớn ở buồng trứng trái được cắt bỏ mà không để lại sẹo, giúp bệnh nhân hồi phục nhanh chóng và xuất viện sau 24 giờ. Phương pháp này giúp giảm đau và không ảnh hưởng đến các chức năng sinh lý như quan hệ tình dục hay sinh con, đồng thời có thể áp dụng cho phụ nữ béo phì.",
     "link": "https://vnexpress.net/phau-thuat-cat-u-buong-trung-giau-seo-4861516.html",
@@ -1992,6 +1996,33 @@
       },
       {
         "text": "Bằng phương pháp phẫu thuật laser",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 quả giàu canxi nên ăn thường xuyên",
+    "content": "Bài viết giới thiệu 7 loại quả giàu canxi mà mọi người nên ăn thường xuyên để duy trì sức khỏe xương và tim mạch. Các loại quả này bao gồm đu đủ, cam, quả sung, kiwi, mâm xôi, quả mơ và chanh, mỗi loại đều có các lợi ích dinh dưỡng riêng. Ngoài ra, bài viết cũng nhấn mạnh rằng việc tiêu thụ quá nhiều trái cây có thể dẫn đến một số tác dụng phụ.",
+    "link": "https://vnexpress.net/7-qua-giau-canxi-nen-an-thuong-xuyen-4861604.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giàu canxi nên ăn thường xuyên?",
+    "answers": [
+      {
+        "text": "Đu đủ, cam, quả sung, kiwi, mâm xôi, quả mơ, chanh",
+        "correct": true
+      },
+      {
+        "text": "Táo, chuối, dưa hấu",
+        "correct": false
+      },
+      {
+        "text": "Nho, lê, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bơ, xoài, cà chua",
         "correct": false
       }
     ]
